--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   http: ^0.13.5
   image_picker: ^0.8.7+1
   provider: ^6.0.5
+  dio: ^5.1.1
+  flutter_secure_storage: ^8.1.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
